syntax = "proto3";
//生成文件所在包名
option java_package = "com.gejian.pixel.proto";
//生成的java文件名
option java_outer_classname = "ConstStageTableItemExProtobuf";

message	ConstStageTableItemEx  {
	optional	uint32	id = 1;
	optional	string	name = 2;
	optional	uint32	class_type = 3;
	optional	uint32	prerequest = 4;
	optional	uint32	mode = 5;
	optional	string	icon = 6;
	optional	string	icon_color = 7;
	optional	string	bg = 8;
	optional	string	bg_color = 9;
	optional	uint32	recommand_power = 10;
	optional	string	monsters = 11;
	optional	string	monsters_attributes = 12;
	optional	string	boss = 13;
	optional	string	boss_attributes = 14;
	optional	uint32	monsters_max = 15;
	optional	ConstStageTableItemEx.constStageTableItemExGoblinFomula	goblin_fomula = 16;
	optional	string	goblin = 17;
	optional	ConstStageTableItemEx.constStageTableItemExBasicAwardFomula	basic_award_fomula = 18;
	optional	string	basic_award = 19;
	optional	ConstStageTableItemEx.constStageTableItemExMonstersKilledAwardFomula	monsters_killed_award_fomula = 20;
	optional	string	monsters_killed_award = 21;
	optional	ConstStageTableItemEx.constStageTableItemExBossAwardFomula	boss_award_fomula = 22;
	optional	string	boss_award = 23;
	optional	uint32	wave = 24;
	optional	string	monster_skill_level = 25;
	optional	string	boss_skill_level = 26;
}