syntax = "proto3";
//生成文件所在包名
option java_package = "com.gejian.pixel.proto";
//生成的java文件名
option java_outer_classname = "ConstStageTableItemExGoblinFomulaProtobuf";

message	ConstStageTableItemExGoblinFomula  {
	optional	string	pro = 1;
	optional	string	monster = 2;
	optional	string	hp = 3;
	optional	string	dropid = 4;
}