syntax = "proto3";
//生成文件所在包名
option java_package = "com.gejian.pixel.proto";
//生成的java文件名
option java_outer_classname = "ConstStageTableItemExMonstersKilledAwardFomulaProtobuf";

message	ConstStageTableItemExMonstersKilledAwardFomula  {
	optional	string	dropid = 1;
	optional	string	dropid_bosskilled = 2;
}